# assistant-starter

./: .env.example  README.md  pyproject.toml
core/: fetch_demo.py
