[project]
name = "assistant-starter"
version = "0.1.0"
description = "Homework 1"
authors = [
    {name = "Sergey",email = "zarochintsevss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
